--- a/news.html
+++ b/news.html
@@ -52,6 +52,24 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.1 has been released! <span class="text-muted">April 02, 2021</span></h3>
+                <p>Apache Karaf runtime 4.3.1 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>java.* packages are now part of system packages</li>
+                  <li>fix on configuration with json format</li>
+                  <li>jetty alias feature for backward compatibility</li>
+                  <li>fix default resolver parallelism value</li>
+                  <li>fix on SSH, and log commands</li>
+                  <li>improvements on the JMX layer</li>
+                  <li>env/prop interpolation support on the SSH client</li>
+                  <li>add property to disable auto refresh in features service</li>
+                  <li>and much more !</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348818" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.2.11 has been released! <span class="text-muted">March 15, 2021</span></h3>
                 <p>Apache Karaf runtime 4.2.11 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
                 <ul>
