--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,16 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.3.2</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.2/apache-karaf-4.3.2-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349968')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.3.1</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.tar.gz.sha512">SHA512</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.1/apache-karaf-4.3.1.zip.sha512">SHA512</a>]
