--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.3.2 has been released! (14/05/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.3.1 has been released! (02/04/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -75,13 +82,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Decanter 2.5.0 has been released! (22/5/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -121,7 +121,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.3.1</strong> - (02/04/21)</p>
+        <p>Last version <strong>4.3.2</strong> - (14/05/21)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
