Remove nabble forum links

--- a/community.html
+++ b/community.html
@@ -17,12 +17,12 @@ permalink: /community
               <h4 class="mb-0">
                 <a>Users List</a>
               </h4>
-              <p class="card-text">[ <a href="mailto:user-subscribe@karaf.apache.org">subscribe</a> | <a href="http://mail-archives.apache.org/mod_mbox/karaf-user/">archives</a> | <a href="http://karaf.922171.n3.nabble.com/Karaf-User-f930749.html" target="_blank">online forum</a> ]</p>
+              <p class="card-text">[ <a href="mailto:user-subscribe@karaf.apache.org">subscribe</a> | <a href="http://mail-archives.apache.org/mod_mbox/karaf-user/">archives</a> ]</p>
 
               <h4 class="mb-0">
                 <a class="text-dark">Developers List</a>
               </h4>
-              <p class="card-text"> [ <a href="mailto:dev-subscribe@karaf.apache.org">subscribe</a> | <a href="http://mail-archives.apache.org/mod_mbox/karaf-dev/">archives</a> | <a href="http://karaf.922171.n3.nabble.com/Karaf-Dev-f930721.html" target="_blank">online forum</a> ]</p>
+              <p class="card-text"> [ <a href="mailto:dev-subscribe@karaf.apache.org">subscribe</a> | <a href="http://mail-archives.apache.org/mod_mbox/karaf-dev/">archives</a> ]</p>
 
               <h4 class="mb-0">
                 <a class="text-dark">Commits List</a>
