--- a/news.html
+++ b/news.html
@@ -13,13 +13,11 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-primary"><i class="fas fa-globe"></i> World</strong>
               <h3 class="mb-0">
-                <a class="text-dark">ApacheCon 2020 @Home</a>
+                <a class="text-dark">ApacheCon 2021 @Home</a>
               </h3>
-              <div class="mb-1 text-muted">September 29, 2020</div>
+              <div class="mb-1 text-muted">September 21, 2020</div>
               <p class="card-text mb-auto">All sessions are now available on our YouTube channel!</p>
-              <a href="https://apachecon.com/acah2020/tracks/karaf.html" target="_blank">Karaf Track</a><br>
-              <a href="https://www.youtube.com/playlist?list=PLU2OcwpQkYCy_awEe5xwlxGTk5UieA37m" target="_blank">YouTube</a><br>
-              <a href="https://www.apachecon.com/acah2020/" target="_blank">Learn more</a>
+              <a href="https://www.apachecon.com/acah2021/" target="_blank">Learn more</a>
             </div>
           </div>
         </div>
@@ -51,6 +49,20 @@ permalink: /news
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.3 has been released! <span class="text-muted">September 07, 2021</span></h3>
+                <p>Apache Karaf runtime 4.3.3 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>first round of the specs features repository. This repository use will spread (in Karaf and third party projects) and we will improve it, but this first round introduces the skeleton we need.</li>
+                  <li>ssh fix new closing socket cleanly</li>
+                  <li>memory leak fix on the blueprint state service</li>
+                  <li>fix on JMX exception push back to the client</li>
+                  <li>bunch of dependency updates</li>
+                  <li>and much more !</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350142" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.3.1 has been released! <span class="text-muted">April 02, 2021</span></h3>
                 <p>Apache Karaf runtime 4.3.1 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
