--- a/news.html
+++ b/news.html
@@ -26,10 +26,10 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Cellar 4.2.1</a>
+                <a class="text-dark">Karaf runtime 4.3.3</a>
               </h3>
-              <div class="mb-1 text-muted">August 21, 2020</div>
-              <p class="card-text mb-auto">This is an important update patch for Apache Karaf Cellar 4.2.x series.</p>
+              <div class="mb-1 text-muted">September 7, 2021</div>
+              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series.</p>
               <a href="#">Learn more</a>
             </div>
           </div>
