Publish Karaf runtime 4.2.12 release

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@ permalink: /
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.2.12 has been released! (16/09/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf 4.3.2 has been released! (14/05/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -72,20 +79,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>ApacheCon 2020 @Home! (29/9/20)</strong> - All sessions are now available on our YouTube channel! (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Cellar 4.2.1 has been released! (21/8/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Cellar 4.2.0 has been released! (18/7/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
