--- a/news.html
+++ b/news.html
@@ -50,6 +50,21 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.2.12 has been released! <span class="text-muted">September 16, 2021</span></h3>
+                <p>Apache Karaf runtime 4.2.11 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+			<li>prevent NPE when creating shell session without in parameter<li>
+			<li>fix on JMX connection with security manager</li>
+			<li>fix on war deployment when the war contains module-info.class</li>
+			<li>fix warning on the org.apache.karaf.specs.locator package</li>
+			<li>bunch of dependency updates</li>
+			<li>and much more!</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349962" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.3.3 has been released! <span class="text-muted">September 07, 2021</span></h3>
                 <p>Apache Karaf runtime 4.3.3 is a release on the 4.3.x series. It provides updates, fixes, improvements, especially:
                 <ul>
