--- a/download.html
+++ b/download.html
@@ -14,29 +14,29 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.3</span></h3>
-              <div class="mb-1 text-muted">September 7, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.4</span></h3>
+              <div class="mb-1 text-muted">December 18, 2021</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.3/apache-karaf-4.3.3.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.3/apache-karaf-4.3.3.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.3/apache-karaf-4.3.3-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.3/apache-karaf-4.3.3-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350142" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350547" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -44,29 +44,29 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.12</span></h3>
-              <div class="mb-1 text-muted">September 16, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.13</span></h3>
+              <div class="mb-1 text-muted">December 19, 2021</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.12/apache-karaf-4.2.12.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.12/apache-karaf-4.2.12.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.12/apache-karaf-4.2.12-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.12/apache-karaf-4.2.12-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.12/apache-karaf-4.2.12-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349962" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350548" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -168,6 +168,8 @@ permalink: /download
                         <th>Series</th>
                         <th>OSGi Version Support</th>
                         <th>Java Version Support</th>
+                        <th>Logging Support</th>
+                        <th>Web Support</th>
                         <th>Current Status</th>
                         <th>Last Version</th>
                         <th>Next Version</th>
@@ -179,77 +181,69 @@ permalink: /download
                       <td>4.3.x</td>
                       <td>7</td>
                       <td>11+</td>
+                      <td>Pax Logging 2.0.11/log4j 2.16.0</td>
+                      <td>Pax Web 7.3.23/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
-                      <td>4.3.3</td>
                       <td>4.3.4</td>
+                      <td>4.3.5</td>
                       <td>Dec 21</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
+                      <td>Pax Logging 1.1.11/log4j 2.16.0</td>
+                      <td>Pax Web 7.2.29/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
-                      <td>4.2.12</td>
                       <td>4.2.13</td>
+                      <td>4.2.14</td>
                       <td>Dec 21</td>
                     </tr>
                     <tr>
-                        <td>4.1.x</td>
-                        <td>6</td>
-                        <td>8</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>4.1.7</td>
-                        <td></td>
-                        <td></td>
+                      <td>4.1.x</td>
+                      <td>6</td>
+                      <td>8</td>
+                      <td>Pax Logging 1.10.7/log4j 1.2.15/log4j 2.12.1</td>
+                      <td>Pax Web 6.0.11/Jetty 9.3.24.v20180605</td>
+                      <td class="text-danger">Not Active</td>
+                      <td>4.1.7</td>
+                      <td></td>
+                      <td></td>
                     </tr>
                     <tr>
-                        <td>4.0.x</td>
-                        <td>5</td>
-                        <td>7 / 8</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>4.0.10</td>
-                        <td></td>
-                        <td></td>
+                      <td>4.0.x</td>
+                      <td>5</td>
+                      <td>7 / 8</td>
+                      <td>Pax Logging 1.10.1/log4j 1.2.15/log4j 2.12.1</td>
+                      <td>Pax Web 4.3.4/Jetty 9.2.15.v20160210</td>
+                      <td class="text-danger">Not Active</td>
+                      <td>4.0.10</td>
+                      <td></td>
+                      <td></td>
                     </tr>
                     <tr>
-                        <td>3.0.x</td>
-                        <td>5</td>
-                        <td>6 (up to Karaf 3.0.5) / 7 / 8</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>3.0.10</td>
-                        <td></td>
-                        <td></td>
+                      <td>3.0.x</td>
+                      <td>5</td>
+                      <td>6 (up to Karaf 3.0.5) / 7 / 8</td>
+                      <td>Pax Logging 1.8.4</td>
+                      <td>Pax Web 3.2.9/Jetty 8.1.15.v20140411</td>
+                      <td class="text-danger">Not Active</td>
+                      <td>3.0.10</td>
+                      <td></td>
+                      <td></td>
                     </tr>
                     <tr>
-                        <td>2.4.x</td>
-                        <td>5</td>
-                        <td>7 / 8</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.4.4</td>
-                        <td></td>
-                        <td></td>
+                      <td>2.4.x</td>
+                      <td>5</td>
+                      <td>7 / 8</td>
+                      <td>Pax Logging 1.8.4</td>
+                      <td>Pax Web 3.2.4/Jetty 8.1.15.v20140411</td>
+                      <td class="text-danger">Not Active</td>
+                      <td>2.4.4</td>
+                      <td></td>
+                      <td></td>
                     </tr>
-                    <tr>
-                        <td>2.3.x</td>
-                        <td>4.3</td>
-                        <td>5 / 6 / 7</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.3.12</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2.2.x</td>
-                        <td>4.2</td>
-                        <td>5 / 6</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.2.9</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-
                   </tbody>
-
                 </table>
               </div><!-- /.blog-post -->
 
