Add 4.3.5 and 4.2.14 releases

--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,26 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.3.5</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350856')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>4.3.4</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350547')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.3.3</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.tar.gz.sha512">SHA512</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.3/apache-karaf-4.3.3.zip.sha512">SHA512</a>]
@@ -69,6 +89,26 @@ permalink: /archives
                             <a href="http://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.sha512">SHA512</a>]
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>4.2.14</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351061')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>4.2.13</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350548')">Release Notes</a></td>
                     </tr>
                     <tr>
                         <td>4.2.12</td>
