--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
-            <p><strong>Karaf 4.2.13 has been released! (19/12/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including log4j 2.16.0 update fixing CVE-2021-44228. (<a href="/news.html">Details</a>)</p>
+            <p><strong>Karaf 4.3.5 has been released! (19/12/21)</strong> - This is a new release for Karaf 4.3.x series. It contains updates, new features and fixes, including log4j 2.17.0 update fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><strong>Karaf 4.2.14 has been released! (24/12/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes, including log4j 2.17.0 update fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -79,20 +86,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.7.0 has been released! (15/02/21)</strong> - This is a new major release for Karaf Decanter 2.x series. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf runtime 4.3.0 has been released! (30/10/20)</strong> - This is a new major release for Karaf, 4.3.x is now the stable branch. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>ApacheCon 2020 @Home! (29/9/20)</strong> - All sessions are now available on our YouTube channel! (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
