--- a/download.html
+++ b/download.html
@@ -14,29 +14,32 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.4</span></h3>
-              <div class="mb-1 text-muted">December 18, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.3.5</span></h3>
+              <div class="mb-1 text-muted">December 19, 2021</div>
+                <p class="card-text mb-auto">
+                  This release fixes logshell security issue, upgrading to log4j 2.17.0 (fixing CVE-2021-45105 and CVE-2021-44228) and logback 1.2.9 (fixing CVE-2021-42550)
+                </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.4/apache-karaf-4.3.4-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.3.4/apache-karaf-4.3.4-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.5/apache-karaf-4.3.5-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.5/apache-karaf-4.3.5-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350547" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350856" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -44,29 +47,32 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.13</span></h3>
-              <div class="mb-1 text-muted">December 19, 2021</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.14</span></h3>
+              <div class="mb-1 text-muted">December 24, 2021</div>
+                <p class="card-text mb-auto">
+                  This release fixes logshell security issue, upgrading to log4j 2.17.0 (fixing CVE-2021-45105 and CVE-2021-44228) and logback 1.2.9 (fixing CVE-2021-42550)
+                </p>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz">tar.gz</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.tar.gz.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.tar.gz.sha512">SHA512</a>]
                     -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.13/apache-karaf-4.2.13-src.zip">zip</a>
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.asc">PGP</a>]
-                            [<a href="https://www.apache.org/dist/karaf/4.2.13/apache-karaf-4.2.13-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.14/apache-karaf-4.2.14-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.14/apache-karaf-4.2.14-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350548" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12351061" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -181,23 +187,23 @@ permalink: /download
                       <td>4.3.x</td>
                       <td>7</td>
                       <td>11+</td>
-                      <td>Pax Logging 2.0.11/log4j 2.16.0</td>
+                      <td>Pax Logging 2.0.12/log4j 2.17.0/logback 1.2.9</td>
                       <td>Pax Web 7.3.23/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
-                      <td>4.3.4</td>
                       <td>4.3.5</td>
-                      <td>Dec 21</td>
+                      <td>4.3.6</td>
+                      <td>Mar 22</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
-                      <td>Pax Logging 1.1.11/log4j 2.16.0</td>
+                      <td>Pax Logging 1.1.12/log4j 2.17.0/logback 1.2.9</td>
                       <td>Pax Web 7.2.29/Jetty 9.4.43.v20210629</td>
                       <td class="text-success">Stable</td>
-                      <td>4.2.13</td>
                       <td>4.2.14</td>
-                      <td>Dec 21</td>
+                      <td>4.2.15</td>
+                      <td>Mar 21</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
