--- a/news.html
+++ b/news.html
@@ -26,10 +26,10 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf runtime 4.3.4</a>
+                <a class="text-dark">Karaf runtime 4.3.5</a>
               </h3>
-              <div class="mb-1 text-muted">December 18, 2021</div>
-              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, especially fixing log4j CVE-2021-44228 issue</p>
+              <div class="mb-1 text-muted">December 19, 2021</div>
+              <p class="card-text mb-auto">This is an important update patch for Apache Karaf runtime 4.3.x series, especially fixing log4j CVE-2021-44228, CVE-2021-45105 and logback CVE-2021-42550 issues</p>
               <a href="#">Learn more</a>
             </div>
           </div>
@@ -48,6 +48,26 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.5 has been released! <span class="text-muted">December 19, 2021</span></h3>
+                <p>Apache Karaf runtime 4.3.5 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>upgrade to Pax Logging 2.0.12, with log4j 2.17.0 fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350548" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.2.14 has been released! <span class="text-muted">December 24, 2021</span></h3>
+                <p>Apache Karaf runtime 4.2.14 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>upgrade to Pax Logging 1.11.12, with log4j 2.17.0 fixing CVE-2021-45105 and logback 1.2.9 fixing CVE-2021-42550</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12350548" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.2.13 has been released! <span class="text-muted">December 19, 2021</span></h3>
